# llvm_playground

./: .gitignore  CMakeLists.txt  README.md  llvm_test.cpp
test/: build.sh  test.c  test_arg_use.c  test_func_use.c  test_global_alias.c  test_malloc.c  test_pointer.c  test_store_gep_alias.c
test/bitcode/: example.k5.bc  test.bc  test_arg_use.bc  test_complex_struct_passing.bc  test_func_use.bc  test_global_alias.bc  test_malloc.bc  test_pointer.bc  test_store_gep_alias.bc
test/llvm_ll/: example.k5.ll  test.ll  test_arg_use.ll  test_complex_struct_passing.ll  test_func_use.ll  test_global_alias.ll  test_malloc.ll  test_pointer.ll  test_store_gep_alias.ll
